Bug 234113 - Crash when adding icon to toolbar and switching views
Summary: Crash when adding icon to toolbar and switching views
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-04-12 00:23 UTC by Ian Neal
Modified: 2010-05-01 19:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Neal 2010-04-12 00:23:28 UTC
Application: kmymoney (3.97.1)
KDE Platform Version: 4.4.1 (KDE 4.4.1)
Qt Version: 4.6.2
Operating System: Linux 2.6.30.10-105.2.23.fc11.i586 i686
Distribution: "Fedora release 11 (Leonidas)"

-- Information about the crash:
Steps to reproduce
1/ Select Ledger View
2/ Configure Toolbars and add Edit Splits icon
3/ Icon gets added (on KMyMoney2 the toolbar gets moved to the wrong place and with wrong settings for icon size/text)
4/ Switch to Home View and then Back to Ledger View
Expected Result
1/ Continue working
Actual Result
1/ Crash

The crash can be reproduced every time.

 -- Backtrace:
Application: KMyMoney (kmymoney), signal: Segmentation fault
[KCrash Handler]
#6  0x00000000 in ?? ()
#7  0x083c31c0 in AccountSet::load (this=0xbfa23dc4, selector=0x8f9c600) at /usr/src/kmymoney/kmymoney/kmymoney/widgets/kmymoneyaccountselector.cpp:267
#8  0x0809c063 in KMyMoneyApp::slotUpdateMoveToAccountMenu (this=0x8e73460) at /usr/src/kmymoney/kmymoney/kmymoney/kmymoney.cpp:5328
#9  0x080d9cb7 in KMyMoneyApp::qt_metacall (this=0x8e73460, _c=QMetaObject::InvokeMetaMethod, _id=90, _a=0xbfa24148) at /usr/src/kmymoney/build/kmymoney/kmymoney.moc:480
#10 0x0653c5ea in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#11 0x0654ada5 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#12 0x0808ed43 in KMyMoneyApp::accountSelected (this=0x8e73460, _t1=@0x8ee346c) at /usr/src/kmymoney/build/kmymoney/kmymoney.moc:624
#13 0x080bcdd4 in KMyMoneyApp::slotSelectAccount (this=0x8e73460, obj=@0x92dbc70) at /usr/src/kmymoney/kmymoney/kmymoney/kmymoney.cpp:6050
#14 0x080da1c6 in KMyMoneyApp::qt_metacall (this=0x8e73460, _c=QMetaObject::InvokeMetaMethod, _id=153, _a=0xbfa24538) at /usr/src/kmymoney/build/kmymoney/kmymoney.moc:549
#15 0x0653c5ea in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#16 0x0654ada5 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#17 0x0815b283 in KGlobalLedgerView::accountSelected (this=0x92dbc38, _t1=@0x92dbc70) at /usr/src/kmymoney/build/kmymoney/views/kgloballedgerview.moc:244
#18 0x081691d3 in KGlobalLedgerView::loadView (this=0x92dbc38) at /usr/src/kmymoney/kmymoney/kmymoney/views/kgloballedgerview.cpp:743
#19 0x0816afe8 in KGlobalLedgerView::slotLoadView (this=0x92dbc38) at /usr/src/kmymoney/kmymoney/kmymoney/views/kgloballedgerview.cpp:295
#20 0x080e2e4e in KMyMoneyView::slotRefreshViews (this=0x9021f80) at /usr/src/kmymoney/kmymoney/kmymoney/views/kmymoneyview.cpp:1633
#21 0x080e694b in KMyMoneyView::qt_metacall (this=0x9021f80, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0xbfa24d44) at /usr/src/kmymoney/build/kmymoney/views/kmymoneyview.moc:114
#22 0x0653c5ea in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#23 0x0654ada5 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#24 0x04703389 in KPageView::currentPageChanged(QModelIndex const&, QModelIndex const&) () from /usr/lib/libkdeui.so.5
#25 0x047041d3 in ?? () from /usr/lib/libkdeui.so.5
#26 0x04704dbf in KPageView::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
#27 0x047090ba in KPageWidget::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeui.so.5
#28 0x080e679a in KMyMoneyView::qt_metacall (this=0x9021f80, _c=QMetaObject::InvokeMetaMethod, _id=30, _a=0xbfa24f54) at /usr/src/kmymoney/build/kmymoney/views/kmymoneyview.moc:103
#29 0x0653c5ea in QMetaObject::metacall(QObject*, QMetaObject::Call, int, void**) () from /usr/lib/libQtCore.so.4
#30 0x0654ada5 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#31 0x075c14e9 in QItemSelectionModel::currentChanged(QModelIndex const&, QModelIndex const&) () from /usr/lib/libQtGui.so.4
#32 0x075c1682 in QItemSelectionModel::setCurrentIndex(QModelIndex const&, QFlags<QItemSelectionModel::SelectionFlag>) () from /usr/lib/libQtGui.so.4
#33 0x0756b1fc in QAbstractItemView::mousePressEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#34 0x070270d4 in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#35 0x074211b3 in QFrame::event(QEvent*) () from /usr/lib/libQtGui.so.4
#36 0x074bb582 in QAbstractScrollArea::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#37 0x0756fccf in QAbstractItemView::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#38 0x074bde65 in ?? () from /usr/lib/libQtGui.so.4
#39 0x065364ba in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#40 0x06fc8c29 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#41 0x06fd0282 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#42 0x046c148a in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#43 0x0653723b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#44 0x06fcf1ef in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#45 0x0705a378 in ?? () from /usr/lib/libQtGui.so.4
#46 0x07059859 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#47 0x07086f8a in ?? () from /usr/lib/libQtGui.so.4
#48 0x001ac308 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#49 0x001af9e0 in ?? () from /lib/libglib-2.0.so.0
#50 0x001afb13 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#51 0x06562f25 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#52 0x07086ab5 in ?? () from /usr/lib/libQtGui.so.4
#53 0x06535849 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#54 0x06535c9a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#55 0x0653841f in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#56 0x06fc8cf7 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#57 0x0808c4f7 in main (argc=1, argv=0xbfa26604) at /usr/src/kmymoney/kmymoney/kmymoney/main.cpp:277

Reported using DrKonqi
Comment 1 Ian Neal 2010-04-12 00:45:04 UTC
BT for KMyMoney2:
Application: KMyMoney (kmymoney2), signal: Segmentation fault
[KCrash Handler]
#6  0x085df64a in AccountSet::load (this=0xbf87e524, selector=0x91991c0) at /usr/src/kmymoney2/kmymoney2/kmymoney2/widgets/kmymoneyaccountselector.cpp:342
#7  0x0815f7ed in KMyMoney2App::slotUpdateMoveToAccountMenu (this=0x90d6e60) at /usr/src/kmymoney2/kmymoney2/kmymoney2/kmymoney2.cpp:4914
#8  0x08183ee6 in KMyMoney2App::qt_invoke (this=0x90d6e60, _id=144, _o=0xbf87e838) at /usr/src/kmymoney2/build/kmymoney2/kmymoney2.moc:872
#9  0x0601e6d2 in QObject::activate_signal (this=0x90d6e60, clist=0x919e4b0, o=0xbf87e838) at kernel/qobject.cpp:2383
#10 0x0813914f in KMyMoney2App::accountSelected (this=0x90d6e60, t0=@0x90d7014) at /usr/src/kmymoney2/build/kmymoney2/kmymoney2.moc:683
#11 0x0816a433 in KMyMoney2App::slotSelectAccount (this=0x90d6e60, obj=@0x930efd8) at /usr/src/kmymoney2/kmymoney2/kmymoney2/kmymoney2.cpp:5642
#12 0x081838c1 in KMyMoney2App::qt_invoke (this=0x90d6e60, _id=208, _o=0xbf87ebe8) at /usr/src/kmymoney2/build/kmymoney2/kmymoney2.moc:936
#13 0x0601e6d2 in QObject::activate_signal (this=0x930ef38, clist=0x93ac140, o=0xbf87ebe8) at kernel/qobject.cpp:2383
#14 0x0820112c in KGlobalLedgerView::accountSelected (this=0x930ef38, t0=@0x930efd8) at /usr/src/kmymoney2/build/kmymoney2/views/kgloballedgerview.moc:322
#15 0x0820ba7f in KGlobalLedgerView::loadView (this=0x930ef38) at /usr/src/kmymoney2/kmymoney2/kmymoney2/views/kgloballedgerview.cpp:715
#16 0x0820db30 in KGlobalLedgerView::show (this=0x930ef38) at /usr/src/kmymoney2/kmymoney2/kmymoney2/views/kgloballedgerview.cpp:1246
#17 0x0605b2f3 in QWidget::showChildren (this=0x92c8a08, spontaneous=false) at kernel/qwidget.cpp:4147
#18 0x0605dbd1 in QWidget::show (this=0x92c8a08) at kernel/qwidget.cpp:4006
#19 0x0617e77c in QWidgetStack::raiseWidget (this=0x91a2448, w=0x92c8a08) at widgets/qwidgetstack.cpp:392
#20 0x0459f834 in KJanusWidget::showPage (this=0x919e7e8, w=0x92c8a08) at kjanuswidget.cpp:597
#21 0x0459fc38 in KJanusWidget::showPage (this=0x919e7e8, index=6) at kjanuswidget.cpp:583
#22 0x0818d091 in KMyMoneyView::showPage (this=0x919e7e8, index=6) at /usr/src/kmymoney2/kmymoney2/kmymoney2/views/kmymoneyview.cpp:318
#23 0x045345fb in KJanusWidget::slotShowPage (this=0x919e7e8) at kjanuswidget.cpp:568
#24 0x0456eea8 in KJanusWidget::qt_invoke (this=0x919e7e8, _id=47, _o=0xbf87f5d8) at kjanuswidget.moc:128
#25 0x081a7352 in KMyMoneyView::qt_invoke (this=0x919e7e8, _id=47, _o=0xbf87f5d8) at /usr/src/kmymoney2/build/kmymoney2/views/kmymoneyview.moc:232
#26 0x0601e76a in QObject::activate_signal (this=0x919f570, clist=0x91a17d0, o=0xbf87f5d8) at kernel/qobject.cpp:2359
#27 0x060207f8 in QObject::activate_signal (this=0x6e0049, signal=13) at kernel/qobject.cpp:2328
#28 0x063c695c in QListBox::selectionChanged (this=0x919f570) at .moc/release-shared-mt/moc_qlistbox.cpp:305
#29 0x06115065 in QListBox::setSelected (this=0x919f570, item=0x930ee88, select=<value optimized out>) at widgets/qlistbox.cpp:2931
#30 0x0610f008 in QListBox::mousePressEventEx (this=0x919f570, e=0xbf87f89c) at widgets/qlistbox.cpp:2051
#31 0x0610f5d4 in QListBox::mousePressEvent (this=0x919f570, e=0xbf87f89c) at widgets/qlistbox.cpp:2023
#32 0x0605c0b9 in QWidget::event (this=0x919f570, e=0xbf87f89c) at kernel/qwidget.cpp:4699
#33 0x05fb5ccd in QApplication::internalNotify (this=0x900d338, receiver=0x919f570, e=0xbf87f89c) at kernel/qapplication.cpp:2638
#34 0x05fb7cf9 in QApplication::notify (this=0x900d338, receiver=0x919fd78, e=0xbf87fa68) at kernel/qapplication.cpp:2424
#35 0x042bff6c in KApplication::notify (this=0x900d338, receiver=0x919fd78, event=0xbf87fa68) at kapplication.cpp:550
#36 0x05f4d01e in QApplication::sendSpontaneousEvent (receiver=0x919fd78, event=0xbf87fa68) at kernel/qapplication.h:526
#37 0x05f4cab5 in QETWidget::translateMouseEvent (this=0x919fd78, event=0xbf87fdec) at kernel/qapplication_x11.cpp:4339
#38 0x05f4b7f5 in QApplication::x11ProcessEvent (this=0x900d338, event=0xbf87fdec) at kernel/qapplication_x11.cpp:3603
#39 0x05f5dd43 in QEventLoop::processEvents (this=0x903a218, flags=4) at kernel/qeventloop_x11.cpp:195
#40 0x05fd0940 in QEventLoop::enterLoop (this=0x903a218) at kernel/qeventloop.cpp:201
#41 0x05fd07e6 in QEventLoop::exec (this=0x903a218) at kernel/qeventloop.cpp:148
#42 0x05fb63bf in QApplication::exec (this=0x900d338) at kernel/qapplication.cpp:2761
#43 0x081362c6 in main (argc=1, argv=0xbf8801f4) at /usr/src/kmymoney2/kmymoney2/kmymoney2/main.cpp:285
Comment 2 Ian Neal 2010-04-18 19:46:53 UTC
Is there any more information I need to provide to help fix this?
Comment 3 Alvaro Soliverez 2010-04-19 04:36:49 UTC
Does this happen only when adding this particular action to the toolbar or is it just any action?
Comment 4 Ian Neal 2010-04-19 20:19:55 UTC
I've only tried the one "Edit Splits"
Comment 5 Thomas Baumgart 2010-05-01 19:12:07 UTC
SVN commit 1121557 by tbaumgart:

Prevent a crash when modifying the toolbar. It still does not work properly, but I will open a new bug for the remaining problems.


BUG: 234113

 M  +22 -2     kmymoney.cpp  
 M  +11 -1     kmymoney.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1121557