Prevent a crash when modifying the toolbar. It still does not work properly, but I will open a new bug for the remaining problems.

BUG: 234113

svn path=/trunk/playground/office/kmymoney/; revision=1121557